--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1{
 
 @media (min-width: 768px){
   h1{
-    font-size: 2.8rem;
+    font-size: rem;
     padding: 20px 0px 10px 0px;
   }
 }
@@ -90,7 +90,7 @@ li{
     line-height: 20px;
 }
 
-footer{
+.footer{
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: center;
